@@ -2,17 +2,19 @@
 """
 
 from __future__ import print_function
-import sys
-import os.path
 import datetime
-import re
-from random import getrandbits
-import zlib
-import subprocess
-import shutil
-import tempfile
-import logging
 from distutils.version import StrictVersion as Version
+import locale
+import logging
+import os
+import os.path
+from random import getrandbits
+import re
+import shutil
+import subprocess
+import sys
+import tempfile
+import zlib
 import pytest
 import icat
 import icat.config
@@ -21,6 +23,10 @@ try:
 except ImportError:
     UtcTimezone = None
 
+# There are tests that depend on being able to read utf8-encoded text
+# files, Issue #54.
+os.environ["LANG"] = "en_US.UTF-8"
+locale.setlocale(locale.LC_CTYPE, "en_US.UTF-8")
 
 # Note that pytest captures stderr, so we won't see any logging by
 # default.  But since Suds uses logging, it's better to still have
